Make the game know about first rounds and point limits. Only enable buttons of available actions.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="points">points</string>
     <string name="total">total</string>
     <string name="roll">Roll</string>
+    <string name="rounds">rounds</string>
     
 </resources>
