Finalized the design of the score activity and made sure it's opened when the score goes over 10000.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="total">total</string>
     <string name="roll">Roll</string>
     <string name="rounds">rounds</string>
+    <string name="winner">Winner</string>
+    <string name="you_scored">You Scored:</string>
     
 </resources>
